# ResizeImageSinglePic

./: CMakeLists.txt  README.md  ResizeImageSinglePic.kdev4
src/: CMakeLists.txt  main.cpp  prefix.hpp
